--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-force-graph-2d": "^1.29.0",
+    "react-markdown": "^10.1.0",
     "react-resizable-panels": "^3.0.6",
     "reactflow": "^11.11.4",
     "recharts": "^3.2.1",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.3.1",
     "zustand": "^5.0.8"
   },
